--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            font-family: 'Intro';
+            src: url('Intro.otf') format('opentype');
             height: 100vh;
             margin: 0;
-            font-family: 'Intro', sans-serif;
+            
         }
+
         #container {
             position: relative;
             width: 300px;
@@ -93,24 +96,29 @@
     </style>
 </head>
 <body>
-    <div id="score">0</div>
-    <div id="container" onclick="scoreUp(event)">
-        <img id="image" src="Star.png" alt="Star">
-        <div id="scoreCounter">+1</div>
-        <div id="plusOneText">+1</div>
-    </div>
-    <div id="progressBar">
-        <div id="progressBarInner"></div>
-    </div>
-    <div>
-        <div class="button" onclick="openUpgradesMenu()">Upgrades</div>
-        <div class="button" id="tasksButton" onclick="openTasksMenu()">Tasks</div>
-    </div>
-    <div class="snackBar" id="snackBar">⭐️ +100</div>
-    <div id="dialog">
-        <div id="dialogContent"></div>
-        <button onclick="closeDialog()">Close</button>
-    </div>
+   <div id="score">0</div>
+   <div id="container" onclick="scoreUp(event)">
+       <img id="image" src="Star.png" alt="Star">
+       <div id="scoreCounter">+1</div>
+       <div id="plusOneText">+1</div>
+   </div>
+   <div id="progressBar">
+       <div id="progressBarInner"></div>
+   </div>
+   <div style="display: flex; justify-content: space-between; width: 220px;">
+       <div class="button" onclick="openUpgradesMenu()">Upgrades</div>
+       <div class="button" id="tasksButton" onclick="openTasksMenu()">Tasks</div>
+   </div>
+   <div class="snackBar" id="snackBar">⭐️ +100</div>
+   <div id="dialog">
+       <div id="dialogContent"></div>
+       <button onclick="closeDialog()">Close</button>
+   </div>
+   <script>
+       // Ваш JavaScript код тут
+   </script>
+</body>
+
     <script>
         let userId = new URLSearchParams(window.location.search).get('user_id') || 'default_user';
         let userData = JSON.parse(localStorage.getItem('userData') || '{}');
